<resources>
    <string name="app_name">MyApp</string>
    <string name="signin">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_click_here_to_register">Don\'t Have an Account? Click Here to Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="book">Book</string>
</resources>